--- a/app/templates/profiles/user/profile.html
+++ b/app/templates/profiles/user/profile.html
@@ -1,15 +1,17 @@
 {% extends "base.html" %}
 {% block content %}
 <div id="profile">
-  <div id="profile-top" class="container">
+  <div id="profile-top" class="floater container">
     <div id="profile-left">
       <div id="profile-image">
         <a href="/user/{{user.username}}/photo/">
         <img alt draggable="false" id="profile-image-content" src="{{ user.profile_photo.src }}">
         </a>
       </div>
-      <p class="title is-4 selectable" style="color:black"><b>{% if user.name %}{{ user.name }}{% else %}{{ user.username }}{% endif %}</b></p>
-      <p class="subtitle is-5 selectable" style="color:gray">@{{ user.username }}</p>
+      <div id="profile-left-bottom">
+        <p class="title is-4 selectable" style="color:black"><b>{% if user.name %}{{ user.name }}{% else %}{{ user.username }}{% endif %}</b></p>
+        <p class="subtitle is-5 selectable" style="color:gray">@{{ user.username }}</p>
+      </div>
     </div>
 
     <div id="profile-right">
@@ -34,7 +36,7 @@
           <span class="icon is-small"><i class="fa fa-birthday-cake" aria-hidden="true"></i></span><span class="selectable">{{user.birthdate.year}}-{{user.birthdate.month}}-{{user.birthdate.day}}</span>
         </div>
         {% if user.address %}
-        <div id="profile-address" style="color: black;">
+        <div id="profile-address">
           <span class="icon is-small"><i class="fa fa-map-marker" aria-hidden="true"></i></span><span class="selectable">{{user.address}}</span>
         </div>
         {% endif %}
@@ -81,7 +83,7 @@
       {% for connection in user.connections %}
       {% endfor %}
       {% if user==current_user %}
-      <div class="add-specific-button"><span>Add connection</span></div>
+      <a href="/explore/"><div class="add-specific-button"><span>Add connection</span></div></a>
       {% endif %}
     </div>
     <div id="profile-groups" class="profile-associate vanish">
@@ -106,9 +108,9 @@
 
 
 {% block modal %}
-{% if edit %}
+{% if request.url_rule.endpoint == 'profiles.edit_user' %}
 {% include "profiles/user/edit.html" %}
-{% elif photo %}
+{% elif request.url_rule.endpoint == 'profiles.user_photo' %}
 {% include "profiles/user/photo.html" %}
 {% endif %}
 {% endblock %}
@@ -332,9 +334,9 @@ function changeToPhoto() {
 
 }
 
-{% if edit %}
+{% if request.url_rule.endpoint == 'profiles.edit_user' %}
 window.history.replaceState({id:"edit-user"},"Edit profile", "/settings/profile/");
-{% elif photo %}
+{% elif request.url_rule.endpoint == 'profiles.user_photo' %}
 window.history.replaceState({id:"user-photo"},"Profile photo", "/user/{{user.username}}/");
 {% else %}
 window.history.replaceState({id:"user-profile"},"Profile", "./");
