info colored more button on navbar

--- a/app/templates/navbar/navbar.html
+++ b/app/templates/navbar/navbar.html
@@ -13,7 +13,7 @@
             {% include 'navbar/navbar-contents.html' %}
             {% endwith %}
 
-            {% with closed="is-inverted is-dark" %}
+            {% with closed="is-info" %}
             {% include 'navbar/more-button.html' %}
             {% endwith %}
 
