--- a/app/templates/navbar/navbar-contents.html
+++ b/app/templates/navbar/navbar-contents.html
@@ -8,7 +8,7 @@
     </a>
   </p>
 {% endif %}
-{% if request.url_rule.endpoint != 'main.notifications' %}
+{% if request.url_rule.endpoint != 'profiles.notifications' %}
 <p class="control">
   <a href="/notifications" class="button transition {% if class %}{{class}}{% endif %}">
     <span id="cog" class="icon">
