--- a/app/templates/profiles/user/edit.html
+++ b/app/templates/profiles/user/edit.html
@@ -14,10 +14,10 @@
   </header>
   <section class="modal-card-body has-text-centered">
 
-  <div id="edit-profile-image">
-      <img draggable="false" id="edit-profile-image-content" src="{{ user.profile_photo.src }}">
+  <div id="edit-associate-image">
+      <img draggable="false" id="edit-associate-image-content" src="{{ user.profile_photo.src }}">
       <input type="file"  accept="image/*" name="image" id="upload" onchange="loadFile(event)" style="display: none;">
-    <button class="button is-large is-white" id="edit-profile-upload">
+    <button class="button is-large is-white" id="edit-associate-image-upload">
     <span class="icon is-medium">
       <i class="fa fa-camera-retro"></i>
     </span>
